compiler/testData/diagnostics/testsWithStdLib/tieredFailures/good/isBackendButBoxFails.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: BACKEND

fun noBoxFunction() {}
