compiler/testData/diagnostics/testsWithStdLib/tieredFailures/fail/isFirButFirPasses.kt
// FIR_IDENTICAL
// ISSUE: KT-67281
// RUN_PIPELINE_TILL: FRONTEND

fun firPasses() {}
